samples/_failures_safe/1761690731_732b6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40265af9.c: In function ‘main’:
./samples/SAFE/__tmp_40265af9.c:154:64: error: expected ‘)’ at end of input
  154 |         if (filter_level == -1 || logs[i].level == filter_level
      |            ~                                                   ^
      |                                                                )
./samples/SAFE/__tmp_40265af9.c:154:9: error: expected declaration or statement at end of input
  154 |         if (filter_level == -1 || logs[i].level == filter_level
      |         ^~
./samples/SAFE/__tmp_40265af9.c:154:9: error: expected declaration or statement at end of input
